objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Eloqua_Campaign_ID__c</fullName>
        <label>Eloqua Campaign ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Parent_Campaign__c</fullName>
        <description>Field from Eloqua that provides information about the parent campaign categorization.</description>
        <label>Eloqua Parent Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4G LTE</fullName>
                </value>
                <value>
                    <fullName>Computer Vision</fullName>
                </value>
                <value>
                    <fullName>Data Analytics for EP</fullName>
                </value>
                <value>
                    <fullName>Edu Hardware Initiative</fullName>
                </value>
                <value>
                    <fullName>HDL Coder</fullName>
                </value>
                <value>
                    <fullName>MATLAB Coder</fullName>
                </value>
                <value>
                    <fullName>MBD for Controls</fullName>
                </value>
                <value>
                    <fullName>MDCS</fullName>
                </value>
                <value>
                    <fullName>PCT blitz</fullName>
                </value>
                <value>
                    <fullName>PID Controls Made Easy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event Date</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotech and Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Chemical and Petroleum</fullName>
                </value>
                <value>
                    <fullName>Communication Devices</fullName>
                </value>
                <value>
                    <fullName>Communication Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Earth and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Industrial Automation and Machinery</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Metals, Materials and Mining</fullName>
                </value>
                <value>
                    <fullName>Other/Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Rail, Ships and other Transportation</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Software and Internet</fullName>
                </value>
                <value>
                    <fullName>Technical Services and Consulting</fullName>
                </value>
                <value>
                    <fullName>Utilities and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interated_Campaign__c</fullName>
        <description>Integrated campaign</description>
        <label>Interated Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integrating MATLAB &amp; Simulink with low cost HW</fullName>
                </value>
                <value>
                    <fullName>Model-Based Design for Small Workgroups</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Image Processing and Computer Vision</fullName>
                </value>
                <value>
                    <fullName>Motor and Power Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location</description>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Activity__c</fullName>
        <label>Partner Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint Sponsored</fullName>
                </value>
                <value>
                    <fullName>MathWorks Sponsored</fullName>
                </value>
                <value>
                    <fullName>Partner Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Cluster__c</fullName>
        <label>Partner Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adafruit</fullName>
                </value>
                <value>
                    <fullName>Altera</fullName>
                </value>
                <value>
                    <fullName>Analog Devices</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Arrow Electronics</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>Beckhoff</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>EBV Elektronik</fullName>
                </value>
                <value>
                    <fullName>element14</fullName>
                </value>
                <value>
                    <fullName>FactSet</fullName>
                </value>
                <value>
                    <fullName>FLIR</fullName>
                </value>
                <value>
                    <fullName>Freescale</fullName>
                </value>
                <value>
                    <fullName>Gamma Technologies</fullName>
                </value>
                <value>
                    <fullName>Keysight Technologies</fullName>
                </value>
                <value>
                    <fullName>Mentor Graphics</fullName>
                </value>
                <value>
                    <fullName>Numerix</fullName>
                </value>
                <value>
                    <fullName>NVIDIA</fullName>
                </value>
                <value>
                    <fullName>Omron</fullName>
                </value>
                <value>
                    <fullName>Rockwell Automation</fullName>
                </value>
                <value>
                    <fullName>Rohde &amp; Schwarz</fullName>
                </value>
                <value>
                    <fullName>Silica</fullName>
                </value>
                <value>
                    <fullName>SparkFun</fullName>
                </value>
                <value>
                    <fullName>Speedgoat</fullName>
                </value>
                <value>
                    <fullName>STMicroelectronics</fullName>
                </value>
                <value>
                    <fullName>Tektronix</fullName>
                </value>
                <value>
                    <fullName>Teledyne LeCroy</fullName>
                </value>
                <value>
                    <fullName>Texas Instruments</fullName>
                </value>
                <value>
                    <fullName>Thomson Reuters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Product Category</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MATLAB Product Family</fullName>
                </value>
                <value>
                    <fullName>Application Deployment</fullName>
                </value>
                <value>
                    <fullName>Code Generation</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control System Design &amp; Analysis</fullName>
                </value>
                <value>
                    <fullName>Database Access and Reporting</fullName>
                </value>
                <value>
                    <fullName>Event-Based Modeling</fullName>
                </value>
                <value>
                    <fullName>Fixed-Point Modeling</fullName>
                </value>
                <value>
                    <fullName>Image Processing and Computer Vision</fullName>
                </value>
                <value>
                    <fullName>Math, Statistics &amp; Optimization</fullName>
                </value>
                <value>
                    <fullName>Multi-Product Category</fullName>
                </value>
                <value>
                    <fullName>Parallel Computing</fullName>
                </value>
                <value>
                    <fullName>Physical Modeling</fullName>
                </value>
                <value>
                    <fullName>Polyspace Product Family</fullName>
                </value>
                <value>
                    <fullName>Rapid Prototyping and HIL Simulation</fullName>
                </value>
                <value>
                    <fullName>Signal Processing and Communications</fullName>
                </value>
                <value>
                    <fullName>Simulation Graphics and Reporting</fullName>
                </value>
                <value>
                    <fullName>Simulink Product Family</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Verification, Validation, and Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>WW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Sector</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Com/Gov</fullName>
                </value>
                <value>
                    <fullName>Edu</fullName>
                </value>
                <value>
                    <fullName>Cross Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Office__c</fullName>
        <description>Office sponsoring the event</description>
        <label>Sponsor Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>MathWorks Worldwide</fullName>
                </value>
                <value>
                    <fullName>Natick - AMER</fullName>
                </value>
                <value>
                    <fullName>Natick - APAC</fullName>
                </value>
                <value>
                    <fullName>Natick - EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Campaign Sub Type</description>
        <inlineHelpText>Campaign Sub Type</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertisement | Ad Print</fullName>
                </value>
                <value>
                    <fullName>Conference | Advisory Board</fullName>
                </value>
                <value>
                    <fullName>Conference | Expo</fullName>
                </value>
                <value>
                    <fullName>Conference | Symposium</fullName>
                </value>
                <value>
                    <fullName>Conference | Virtual Event</fullName>
                </value>
                <value>
                    <fullName>Contact Lists | Contact Lists</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Customer Activity Report</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Demand Generation</fullName>
                </value>
                <value>
                    <fullName>Direct Email | MOOC</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Other</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Partner Notification</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Product General Release</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Product Prerelease</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Product Price Notification</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Product Transition</fullName>
                </value>
                <value>
                    <fullName>Direct Email | Product Web Release</fullName>
                </value>
                <value>
                    <fullName>In Product Trials | Trial Download</fullName>
                </value>
                <value>
                    <fullName>In Product Trials | Trial Request</fullName>
                </value>
                <value>
                    <fullName>Lead Nurturing | Accelerator</fullName>
                </value>
                <value>
                    <fullName>Lead Nurturing | Post-purchase</fullName>
                </value>
                <value>
                    <fullName>Lead Nurturing | Qualification</fullName>
                </value>
                <value>
                    <fullName>Lead Nurturing | Welcome</fullName>
                </value>
                <value>
                    <fullName>Live Webinar | Partner/3rd Party</fullName>
                </value>
                <value>
                    <fullName>Live Webinar | Private</fullName>
                </value>
                <value>
                    <fullName>Live Webinar | Public</fullName>
                </value>
                <value>
                    <fullName>Newsletter | MATLAB Digest</fullName>
                </value>
                <value>
                    <fullName>Newsletter | News &amp; Notes</fullName>
                </value>
                <value>
                    <fullName>Pay Per Click | Collateral Download</fullName>
                </value>
                <value>
                    <fullName>Pay Per Click | Other Video</fullName>
                </value>
                <value>
                    <fullName>Pay Per Click | Pricing Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Office__c</fullName>
        <label>Supporting Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>MathWorks Worldwide</fullName>
                </value>
                <value>
                    <fullName>Natick - AMER</fullName>
                </value>
                <value>
                    <fullName>Natick - APAC</fullName>
                </value>
                <value>
                    <fullName>Natick - EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>America/Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/Los Angeles</fullName>
                </value>
                <value>
                    <fullName>America/New York</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Melbourne</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Europe/Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Europe/Berlin</fullName>
                </value>
                <value>
                    <fullName>Europe/Helsinki</fullName>
                </value>
                <value>
                    <fullName>Europe/London</fullName>
                </value>
                <value>
                    <fullName>Europe/Madrid</fullName>
                </value>
                <value>
                    <fullName>Europe/Paris</fullName>
                </value>
                <value>
                    <fullName>Europe/Rome</fullName>
                </value>
                <value>
                    <fullName>Europe/Stockholm</fullName>
                </value>
                <value>
                    <fullName>Europe/Zurich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workfront_ID__c</fullName>
        <description>Workfront ID</description>
        <label>Workfront ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_e2a__Thread_Id__c</fullName>
        <formula>&quot;ref:&quot;&amp;
LEFT( $Organization.Id , 4 )&amp;
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0000000&apos;), RIGHT($Organization.Id,4),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;000000&apos;), RIGHT($Organization.Id,5),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;00000&apos;), RIGHT($Organization.Id,6),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0000&apos;), RIGHT($Organization.Id,7),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;000&apos;), RIGHT($Organization.Id,8),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;00&apos;), RIGHT($Organization.Id,9),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0&apos;), RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11)
)))))))
&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp;

IF(BEGINS(RIGHT(Id,11), &apos;0000000&apos;), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), &apos;000000&apos;), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), &apos;00000&apos;), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), &apos;0000&apos;), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), &apos;000&apos;), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), &apos;00&apos;), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), &apos;0&apos;), RIGHT(Id,10),
RIGHT(Id,11)
))))))) &amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Marketing_Campaign</fullName>
        <active>true</active>
        <description>Represents campaigns created in Eloqua</description>
        <label>Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Campaign</fullName>
        <active>true</active>
        <description>Used by Sales users to create and track call lists</description>
        <label>Sales Campaign</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Sales_Users_Edit_MKt_Campaigns</fullName>
        <active>true</active>
        <description>This validation rule will restrict Sales users to edit Marketing campaigns.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Marketing_Campaign&quot;,  NOT($Permission.Allow_Campaign_Edits))</errorConditionFormula>
        <errorMessage>This is a marketing created campaign and cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>